chore: minor fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "rules": {
     "implicit-arrow-linebreak": 1,
     "no-console": "warn",
+    "object-curly-newline": 0,
     "import/extensions": [
       0,
       "never",
