--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es6",
+    "checkJs": false,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
