--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "private": true,
   "author": "akishin@dev.vtb.ru",
   "repository": "https://github.com/frontmaker/vacations_backend.git",
-  "engines": {
-    "node": "14.16.0"
-  },
   "scripts": {
-    "start": "node dist/server.js",
     "build": "tsc",
+    "start": "node ./dist/server.js",
     "dev": "./bin/dev.sh",
     "dev-server": "NODE_ENV=development nodemon",
     "ts-node-server": "ts-node src/server.ts",
@@ -17,18 +14,24 @@
     "lint:fix": "./node_modules/eslint/bin/eslint.js  src --ext .ts --fix"
   },
   "dependencies": {
+    "@prisma/client": "2.21.2",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "joi": "17.4.0",
-    "mongoose": "5.12.5",
+    "pg": "8.6.0",
+    "prisma": "2.21.2",
+    "uuid": "8.3.2",
     "winston": "3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "3.0.1",
     "@types/compression": "1.7.0",
     "@types/express": "4.17.11",
     "@types/node": "14.14.41",
+    "@types/pg": "7.14.11",
+    "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
     "eslint": "7.24.0",
