--- a/package.json
+++ b/package.json
@@ -15,20 +15,29 @@
   },
   "dependencies": {
     "@prisma/client": "2.21.2",
+    "bcrypt": "^5.0.1",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
+    "connect-redis": "^5.2.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "express-session": "^1.17.1",
     "joi": "17.4.0",
     "pg": "8.6.0",
     "prisma": "2.21.2",
+    "redis": "^3.1.2",
     "uuid": "8.3.2",
     "winston": "3.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "3.0.1",
     "@types/compression": "1.7.0",
+    "@types/connect-redis": "^0.0.16",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/node": "14.14.41",
     "@types/pg": "7.14.11",
     "@types/uuid": "8.3.0",
