--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "4.17.1",
     "express-session": "^1.17.1",
     "joi": "17.4.0",
+    "lodash": "^4.17.21",
     "pg": "8.6.0",
     "prisma": "2.21.2",
     "redis": "^3.1.2",
@@ -38,6 +39,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/lodash": "^4.14.168",
     "@types/node": "14.14.41",
     "@types/pg": "7.14.11",
     "@types/uuid": "8.3.0",
