chore: change port; update build script

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "author": "akishin@dev.vtb.ru",
   "repository": "https://github.com/frontmaker/vacations_backend.git",
   "scripts": {
-    "build": "tsc",
+    "build": "docker-compose up -d --force-recreate && npm start",
     "start": "node ./dist/server.js",
     "dev": "./bin/dev.sh",
-    "dev-server": "NODE_ENV=development nodemon",
+    "compile": "prisma generate && tsc",
+    "dev-server": "cross-env NODE_ENV=development nodemon",
     "ts-node-server": "ts-node src/server.ts",
     "seed": "prisma db seed --preview-feature",
+    "prisma:generate": "prisma generate",
     "lint": "./node_modules/eslint/bin/eslint.js  src --ext .ts",
     "lint:fix": "./node_modules/eslint/bin/eslint.js  src --ext .ts --fix"
   },
@@ -46,6 +48,7 @@
     "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
+    "cross-env": "^7.0.3",
     "eslint": "7.24.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.22.1",
