--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "bcrypt": "^5.0.1",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
-    "connect-redis": "^5.2.0",
+    "connect-redis": "4.0.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "express-session": "^1.17.1",
+    "express-session": "1.17.0",
     "joi": "17.4.0",
     "lodash": "^4.17.21",
     "pg": "8.6.0",
@@ -38,10 +38,10 @@
   "devDependencies": {
     "@types/bcrypt": "3.0.1",
     "@types/compression": "1.7.0",
-    "@types/connect-redis": "^0.0.16",
+    "@types/connect-redis": "0.0.10",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "4.17.11",
-    "@types/express-session": "^1.17.3",
+    "@types/express-session": "1.17.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "14.14.41",
     "@types/pg": "7.14.11",
