--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "typeRoots": [
+      "./src/types", // this is where you define your types
+      "./node_modules/@types" //this where npm packages containing types are located
+    ],
     "paths": {
       "*": [
         "node_modules/*"
