--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/compression": "1.7.0",
     "@types/connect-redis": "0.0.16",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
     "@types/express": "4.17.11",
     "@types/express-session": "1.17.3",
     "@types/lodash": "^4.14.168",
