--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,6 +73,7 @@
     "no-unused-vars": "off",
     "dot-notation": "off",
     "class-methods-use-this": "off",
+    "max-len": ["error", { "code": 120 }],
     "comma-dangle": [
       "error",
       {
