--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect-redis": "5.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "date-fns": "^2.21.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-session": "1.17.1",
